[package]
name = "hysteria_studio"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
rodio = { version = "0.20", default-features = false, features = ["vorbis", "wav"] }

[profile.release]
opt-level = 2
